Oauth is completed

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ PureClock --Welcome
                     {% include "record_list_index.html" %}
                 {% endwith %}
             {% else %}
-                No bookmarks yet.
+                No Records yet.
             {% endif %}
         </section>
     </article>
