Oauth an authority

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 {% extends "base.html" %}
 
 {% block title %}
@@ -9,18 +14,44 @@ PureClock -- Manager
 {% block content %}
     <article>
         <header>
-            <h1>Welcome! Admin</h1>
+            <h1>Welcome! Admin {{user.username}}</h1>
             <p> A strong man will struggle with the storms of fate.</p>
         </header>
-        <section>
-            <h2>Recently Added</h2>
-            {% if new_bookmarks.count() > 0 %}
-                {% with bookmarks=new_bookmarks %}
-                    {% include "record_list_admin.html" %}
-                {% endwith %}
-            {% else %}
-                No bookmarks yet.
-            {% endif %}
-        </section>
+        <div class="tabbable" id="tabs-634598">
+				<ul class="nav nav-tabs">
+					<li class="active">
+						 <a href="#panel-781750" data-toggle="tab">User's Record</a>
+					</li>
+					<li>
+						 <a href="#panel-533609" data-toggle="tab">User's Application</a>
+					</li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane active" id="panel-781750">
+                        <section>
+                            <h3>Recently Records</h3>
+                            {% if new_bookmarks.count() > 0 %}
+                                {% with bookmarks=new_bookmarks %}
+                                    {% include "record_list_index.html" %}
+                                {% endwith %}
+                            {% else %}
+                                No Records yet.
+                            {% endif %}
+                        </section>
+					</div>
+					<div class="tab-pane" id="panel-533609">
+                        <section>
+                            <h3>Recently Application</h3>
+                            {% if applications.count() > 0 %}
+                                {% with Applications=applications %}
+                                    {% include "application_list.html" %}
+                                {% endwith %}
+                            {% else %}
+                                No Application yet.
+                            {% endif %}
+                        </section>
+					</div>
+				</div>
+        </div>
     </article>
 {% endblock%}
