--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,17 @@
                 <a href="{{ url_for('index')}}"><h1 class="title">PureClock</h1></a>
                 <nav>
                     <ul>
-                        <li><a href="{{ url_for('add') }}">Add Records</a></li>
-                        {% if current_user.is_authenticated %}
+                        {% if current_user.is_authenticated and current_user.authority==0 %}
+                            <li><a href="{{ url_for('login') }}">Sign in</a></li>
+                        {% elif current_user.is_authenticated and current_user.authority==1 %}
+                            <li><a href="{{ url_for('add') }}">Add Records</a></li>
                             <li><a href="{{ url_for('user', username=current_user.username) }}">My Records</a></li>
                             <li><a href="{{ url_for('logout') }}">Sign out</a></li>
+                        {% elif current_user.is_authenticated and current_user.authority==2 %}
+                            <li><a href="{{ url_for('logout') }}">Sign out</a></li>
                         {% else %}
-                            <li><a href="{{ url_for('signup') }}">Sign up</a></li>
                             <li><a href="{{ url_for('login') }}">Sign in</a></li>
+                            <li><a href="{{ url_for('index') }}">Home</a></li>
                         {% endif %}
                     </ul>
                 </nav>
